--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.1",
-    "classnames": "^2.3.2",
+    "classnames": "2.3.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-scripts": "5.0.1",
@@ -21,6 +21,6 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.3.2"
+    "tailwindcss": "3.3.2"
   }
 }
